<resources>
    <string name="app_name">Anotaí</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Generic-->
    <string name="generic_error">Ocorreu um erro. Tente novamente mais tarde.</string>
    <string name="undo">Desfazer</string>
    <string name="save">Salvar</string>

    <!--    Category List Fragment-->
    <string name="empty_category_name_error">Digite o nome da categoria</string>
    <string name="empty_category_list">Nenhuma categoria registrada.</string>
    <string name="hint_category_name">Nome da categoria</string>

    <!--    Category ViewModel-->
    <string name="success_in_deleting_category">Tarefa removida com sucesso.</string>
    <string name="error_deleting_category">Não foi possível remover a tarefa. Tente novamente mais tarde.</string>

    <!--    Layout Note Item List-->
    <string name="note_title">Título</string>
    <string name="note_text">Texto</string>
    <string name="note_date">27/07/2001</string>

    <!--INSERT NOTE FRAGMENT-->
    <string name="empty_note_title_error">Informe um título</string>
    <string name="empty_note_text_error">Preencha este campo</string>


</resources>